# telemetry-manager

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
telemetry_manager/: __init__.py  manager.py
telemetry_manager/common/: __init__.py  manager.py  resource.py  settings_file.py
telemetry_manager/log/: __init__.py  manager.py
telemetry_manager/metric/: __init__.py  manager.py
telemetry_manager/trace/: __init__.py  manager.py
