[tool.poetry]
name = "telemetry-manager"
version = "1.1.2"
description = "A straighthrough manager for python opentelemetry exporter"
authors = ["Nick <smbrine@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opentelemetry-sdk = "^1.27.0"
httpx = "^0.27.2"
pydantic-settings = "^2.5.2"
psutil = "^6.0.0"


[tool.poetry.group.gRPC.dependencies]
opentelemetry-exporter-otlp-proto-grpc = "^1.27.0"


[tool.poetry.group.HTTP.dependencies]
opentelemetry-exporter-otlp-proto-http = "^1.27.0"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
mypy = "^1.11.2"
flake8 = "^7.1.1"
pylint = "^3.2.7"
ruff = "^0.6.5"
pycodestyle = "^2.12.1"
twine = "^5.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
